# fastapi-movie-catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: hello-action.yaml  python-checks.yaml
movie-catalog/: .env.template  app_lifespan.py  config.default.yaml  main.py  stuff.py
movie-catalog/api/: main_views.py
movie-catalog/api/api_v1/auth/services/: redis_tokens_helper.py  redis_users_helper.py  (+2 more)
movie-catalog/api/api_v1/movies/: crud.py  dependencies.py  redis.py  views.py
movie-catalog/commands/: cli.py  hello.py  tokens.py
movie-catalog/core/: config.py
movie-catalog/dependencies/: auth.py  movies.py
movie-catalog/misc/: flash_messages.py
movie-catalog/rest/: __init__.py  main_views.py
movie-catalog/rest/movies/: __init__.py  create_views.py  delete_views.py  list_views.py  update_views.py
movie-catalog/schemas/: movies.py
movie-catalog/services/auth/: redis_tokens_helper.py
movie-catalog/services/movies/: __init__.py  form_response_helper.py
movie-catalog/storage/movies/: __init__.py  crud.py  exceptions.py
movie-catalog/templates/: about.html  base.html  home.html
movie-catalog/templates/components/: navbar.html
movie-catalog/templates/macro/: form_fields.html
movie-catalog/templates/movies/: create.html  list.html  update.html
movie-catalog/templates/movies/components/: back-to-list.html
movie-catalog/templates/movies/macro/: form.html
movie-catalog/templating/: jinja_templates.py
movie-catalog/testing/: conftest.py
movie-catalog/testing/test_api/: conftest.py  test_main_views.py
movie-catalog/testing/test_schemas/: test_movies.py
(+11 files in other folders)
